--- a/style.css
+++ b/style.css
@@ -1,15 +1,114 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  font-family: "Montserrat";
+}
+section {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #1e1f26; */
+}
+.container {
+  width: 100%;
+  max-width: 1000px;
+  margin: 50px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: aqua; */
+}
+.left {
+  width: 100vw;
+  height: 600px;
+  background:#0179fa32
+    no-repeat center / cover;
+  border-radius: 50px;
+}
+.right {
+  width: 50%;
+  min-height: 400px;
+  background-color: #292941;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  border-radius: 50px;
+  color: white;
+  margin-left: -500px;
+  /* margin-right: 500px; */
+}
+.right h1 {
+  font-size: 40px;
+  font-weight: lighter;
+}
+.right p {
+  margin: 20px 0;
+  font-weight: 500;
+  line-height: 25px;
+}
+.right a {
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: white;
+  color: black;
+  padding: 20px 30px;
+  display: inline-block;
+  letter-spacing: 2px;
+}
 
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    width: 100%;
+    margin: 0 20px;
+  }
+  .left {
+    width: 100%;
+    height: 400px;
+  }
+  .right {
+    width: 90%;
+    margin: 0;
+    margin-top: -100px;
+  }
+}
+.color-blue{
+    color:#017bfa;
+}
+.card-stats{
+    padding:50px;
+    margin-bottom:100px;
+}
+.number-stats{
+    font-size: 40px;
+    font-weight:600;
+}
+.number-stats,.stats-description {
+    color:white;
+  text-align: center;
 
+    /* padding-bottom: 150px; */
+}
+.w-layout{
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
 .header{
     padding: 2% 10%;
     background-color: #0f0d23;
-  
-   
+    width: 100vw;
 }
 .navbar-expand-lg .navbar-collapse {
-    font-size: 1.5em;
-    
-    
+    font-size: 1.5em; 
 }
 
 .nav-item{
@@ -73,4 +172,9 @@
     border-radius: 8em !important; 
     font-weight: bold !important;
     padding: 0.5rem 1.5rem !important;
+}
+@media (max-width:746px){
+    .card-stats{
+        margin-bottom:0;
+    }
 }
