--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ section {
   /* background-color: #1e1f26; */
 }
 .container {
+  
   width: 100%;
   max-width: 1000px;
-  margin: 50px auto;
+  /* margin: 2em 2em; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,6 +33,10 @@ section {
   border-radius: 50px;
 }
 .right {
+ 
+  background-image: url("pic3.jpg");
+ 
+  
   width: 50%;
   min-height: 400px;
   background-color: #292941;
@@ -43,10 +48,12 @@ section {
   color: white;
   margin-left: -500px;
   /* margin-right: 500px; */
+  
 }
 .right h1 {
   font-size: 40px;
   font-weight: lighter;
+  
 }
 .right p {
   margin: 20px 0;
@@ -62,6 +69,7 @@ section {
   display: inline-block;
   letter-spacing: 2px;
 }
+
 footer {
   border-top: 2px double white;
   width: 100%;
@@ -99,7 +107,8 @@ footer p {
 }
 .card-stats{
     padding:50px;
-    margin-bottom:100px;
+    /* margin-bottom: em; */
+    margin-top: 2em;
 }
 .number-stats{
     font-size: 40px;
@@ -169,8 +178,9 @@ footer p {
   animation: rotation 25s infinite linear;
 }
 .rotated{
-    margin-left: 8em;
+    margin-left: 9em;
     width: 50%;
+    margin-top: 3em;
     /* opacity:1; */
     /* transform: rotate(45deg); */
    
@@ -205,3 +215,47 @@ footer p {
         margin-bottom:0;
     }
 }
+body{
+  overflow-x: hidden;
+}
+
+.heading2{
+  color: white;
+  text-align: center;
+  
+}
+.row h1 {
+  
+  margin-top: 1em;
+}
+.team{
+  color: white;
+  margin-left: 7em;
+  margin-top: 7em;
+}
+.team li{
+  list-style-type: auto;
+  padding: 1em 1em;
+    font-size: 1.5em;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+.ethar{
+  border-radius: 3em !important;
+  color: White !important;
+  letter-spacing: 3px !important;
+  padding: 0.7em 1.2em !important;
+  border-color: #017bfa !important;
+  font-weight: bold !important;
+  
+}
+.ethar:hover{
+ color: #0f0d23 !important;
+  
+}
+.fa-ethereum:before {
+  content: "\f42e";
+  margin-right: 5px;
+}
+
+
