--- a/style.css
+++ b/style.css
@@ -86,22 +86,6 @@ footer p {
   font-weight:600;
   cursor: pointer;
 }
-@media only screen and (max-width: 999px) {
-  .container {
-    flex-direction: column;
-    width: 100%;
-    margin: 0 20px;
-  }
-  .left {
-    width: 100%;
-    height: 400px;
-  }
-  .right {
-    width: 90%;
-    margin: 0;
-    margin-top: -300px;
-  }
-}
 .color-blue{
     color:#017bfa;
 }
@@ -210,11 +194,6 @@ footer p {
     font-weight: bold !important;
     padding: 0.5rem 1.5rem !important;
 }
-@media (max-width:746px){
-    .card-stats{
-        margin-bottom:0;
-    }
-}
 body{
   overflow-x: hidden;
 }
@@ -257,5 +236,31 @@ body{
   content: "\f42e";
   margin-right: 5px;
 }
-
+@media (max-width:746px){
+  .card-stats{
+      margin-bottom:0;
+  }
+  .team{
+    color: white;
+    margin-left: 3rem;;
+    margin-top: 5em;
+  }
+}
+@media only screen and (max-width: 999px) {
+  .container {
+    flex-direction: column;
+    width: 100%;
+    margin: 0 20px;
+  }
+  .left {
+    width: 100%;
+    height: 800px;
+  }
+  .right {
+    width: 90%;
+    margin: 0;
+    margin-top: -80px; 
+    margin-bottom: 20px;
+  }
+}
 
