--- a/style.css
+++ b/style.css
@@ -319,7 +319,6 @@ body{
     margin-bottom: 20px;
   }
 }
-<<<<<<< HEAD
 
 
 .whole{
@@ -342,12 +341,30 @@ body{
 .navbar-toggler-icon {
   background-image: url(
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")!important;
-=======
-@media (max-width:370px){
+}@media (max-width:370px){
   .rotated{
     margin-left: 4.4rem;
     width: 60%;
   }
->>>>>>> f99bd3854eaa85fc3913286ab43ff70c345c9a25
 }
 
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px ;
+  height: 300px;
+}
+
+/* .swiper-slide {
+  flex-shrink: 0;
+  width: 12%;
+  height: 100%;
+  position: relative;
+  transition-property: transform;
+} */
